<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/jan"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/jan"
        app:layout_constraintEnd_toStartOf="@+id/feb"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/feb"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/feb"
        app:layout_constraintEnd_toStartOf="@+id/mar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/jan"
        app:layout_constraintTop_toTopOf="@+id/jan" />

    <Button
        android:id="@+id/mar"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/mar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/feb"
        app:layout_constraintTop_toTopOf="@+id/feb" />

    <Button
        android:id="@+id/apr"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/apr"
        app:layout_constraintEnd_toStartOf="@+id/may"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jan" />

    <Button
        android:id="@+id/may"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/may"
        app:layout_constraintEnd_toStartOf="@+id/jun"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/apr"
        app:layout_constraintTop_toTopOf="@+id/apr" />

    <Button
        android:id="@+id/jun"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/jun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/may"
        app:layout_constraintTop_toTopOf="@+id/may" />

    <Button
        android:id="@+id/jul"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/jul"
        app:layout_constraintEnd_toStartOf="@+id/aug"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apr" />

    <Button
        android:id="@+id/aug"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/aug"
        app:layout_constraintEnd_toStartOf="@+id/sep"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/jul"
        app:layout_constraintTop_toTopOf="@+id/jul" />

    <Button
        android:id="@+id/sep"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="0dp"
        android:text="@string/sep"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/aug"
        app:layout_constraintTop_toTopOf="@+id/aug" />

    <Button
        android:id="@+id/oct"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/oct"
        app:layout_constraintEnd_toStartOf="@+id/nov"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jul" />

    <Button
        android:id="@+id/nov"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/nov"
        app:layout_constraintEnd_toStartOf="@+id/dec"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/oct"
        app:layout_constraintTop_toTopOf="@+id/oct" />

    <Button
        android:id="@+id/dec"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:text="@string/dec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nov"
        app:layout_constraintTop_toTopOf="@+id/nov" />
</android.support.constraint.ConstraintLayout>