<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item
        android:id="@+id/done_list"
        android:icon="@drawable/ic_done_list"
        android:title="@string/done_list"
        app:showAsAction="ifRoom|withText"/>-->
    <item
        android:id="@+id/clear_list"
        android:icon="@drawable/ic_menu_clear_all"
        android:title="@string/clear_list"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/new_cheque"
        android:icon="@drawable/ic_add_item"
        android:title="@string/apply_items"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/monthly"
        android:icon="@drawable/ic_months"
        android:title="@string/monthly_cheques"
        app:showAsAction="ifRoom|withText"/>

</menu>